docs: add javadoc
Se agregó documentación javadoc a los archivos y formato de tabs (y estilo)